--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>User Directory</h1>
+    <h1 id="head1">User Directory</h1>
+    <h1 id="head2">Another Heading</h1>
+    <h1 id="head3">And Another Heading</h1>
     <button>Click Me</button>
 
     <script src="index.js"></script>
