#super_mega_bonus_credit completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1 id="head1">User Directory</h1>
     <h1 id="head2">Another Heading</h1>
     <h1 id="head3">And Another Heading</h1>
+    <form>
+        <input id="inputText" type="text" name="changeHead">
+    </form>
     <button>Click Me</button>
 
     <script src="index.js"></script>
