Added: font, color, placeholder, paragraph

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <h1 id="head2">Another Heading</h1>
     <h1 id="head3">And Another Heading</h1>
     <form>
-        <input id="inputText" type="text" name="changeHead">
+        <p>Type in a new input for Heading2 below:</p>
+        <input id="inputText" type="text" name="changeHead" placeholder="Type Here..">
     </form>
-    <button>Click Me</button>
+    <button>Submit New Heading</button>
 
     <script src="index.js"></script>
 </body>
