Added: background color, font color, font type, font size

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Type in a new input for Heading2 below:</p>
         <input id="inputText" type="text" name="changeHead" placeholder="Type Here..">
     </form>
-    <button>Submit New Heading</button>
+    <button> New Heading</button>
 
     <script src="index.js"></script>
 </body>
