--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <center>
     <h1 id="head1">User Directory</h1>
     <h1 id="head2">Another Heading</h1>
     <h1 id="head3">And Another Heading</h1>
@@ -16,6 +17,7 @@
         <input id="inputText" type="text" name="changeHead" placeholder="Type Here..">
     </form>
     <button> New Heading</button>
+</center>
 
     <script src="index.js"></script>
 </body>
