--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <h1 id="head1">User Directory</h1>
     <h1 id="head2">Another Heading</h1>
     <h1 id="head3">And Another Heading</h1>
-    <form>
+
+    <form id="userForm">
         <p>Type in a new input for Heading2 below:</p>
+        <label for="userName">New Heading: </label>
         <input id="inputText" type="text" name="changeHead" placeholder="Type Here..">
+        <button type="submit">Submit</button>
     </form>
-    <button> New Heading</button>
+
 </center>
 
     <script src="index.js"></script>
