Used event target to get text input Added: reset button

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
     <form id="userForm">
         <p>Type in a new input for Heading2 below:</p>
-        <label for="userName">New Heading: </label>
+        <label for="changeHead">New Heading: </label>
         <input id="inputText" type="text" name="changeHead" placeholder="Type Here..">
         <button type="submit">Submit</button>
+        <button type="reset">Clear</button>
     </form>
 
 </center>
