Added: user names in individual paragraphs + multiple inputs

--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 <body>
     <center>
     <h1 id="head1">User Directory</h1>
-    <h1 id="head2">Another Heading</h1>
-    <h1 id="head3">And Another Heading</h1>
 
     <form id="userForm">
-        <p>Type in a new input for Heading2 below:</p>
-        <label for="changeHead">New Heading: </label>
-        <input id="inputText" type="text" name="changeHead" placeholder="Type Here..">
+        <p>
+        <label for="userName">Name </label>
+        <input id="inputText" type="text" name="userName" placeholder="Type Here.." value=""autofocus>
+        </p>
+
         <button type="submit">Submit</button>
         <button type="reset">Clear</button>
     </form>
+
+    <div id="users">
+    </div>
 
 </center>
 
