Addded: focus on username after submit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <form id="userForm">
         <p>
         <label for="userName">Name </label>
-        <input id="inputText" type="text" name="userName" placeholder="Type Here.." value=""autofocus>
+        <input id="inputText" type="text" name="userName" placeholder="Type Here.." autofocus>
+        <br>
+        <label for="age">Age </label>
+        <input id="inputAge" type="text" name="age" placeholder="Type Here..">
         </p>
 
         <button type="submit">Submit</button>
