--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input id="inputText" type="text" name="userName" placeholder="Type Here.." autofocus>
         <br>
         <label for="age">Age </label>
-        <input id="inputAge" type="text" name="age" placeholder="Type Here..">
+        <input id="inputAge" type="number" name="age" placeholder="Type Here..">
         </p>
 
         <button type="submit">Submit</button>
