Added: user input color to background of output

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <label for="age">Age </label>
         <input id="inputAge" type="number" name="age" placeholder="Type Here..">
         </p>
+        <p>
+            <label for="favColor">Favorite Color </label>
+            <!-- <input type="color" name="favColor" placeholder="Type Here.."> -->
+            <input type="text" name="favColor" placeholder="Type Here..">
+        </p>
 
         <button type="submit">Submit</button>
         <button type="reset">Clear</button>
