Added: input type color

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </p>
         <p>
             <label for="favColor">Favorite Color </label>
-            <!-- <input type="color" name="favColor" placeholder="Type Here.."> -->
-            <input type="text" name="favColor" placeholder="Type Here..">
+            <input type="color" name="favColor" placeholder="Type Here..">
+            
         </p>
 
         <button type="submit">Submit</button>
