Added: rounded buttons, button color, background color, borders, mutliple fonts

--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
     <h1 id="head1">User Directory</h1>
 
     <form id="userForm">
-        <p>
+        <p style="display:inline-block;padding:40px;border:2px solid;font-size:140%;font-weight:bold;">
         <label for="userName">Name </label>
         <input id="inputText" type="text" name="userName" placeholder="Type Here.." autofocus>
-        <br>
+        <br><br>
         <label for="age">Age </label>
         <input id="inputAge" type="number" name="age" placeholder="Type Here..">
-        </p>
-        <p>
+        <!-- </p>
+        <p> -->
+            <br><br>
             <label for="favColor">Favorite Color </label>
             <input type="color" name="favColor" placeholder="Type Here..">
             
         </p>
-
+        <br><br>
         <button type="submit">Submit</button>
         <button type="reset">Clear</button>
     </form>
