Added: css code to format page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <center>
-    <h1 id="head1">User Directory</h1>
-
+    <h1 class="head" id="head1">User Directory</h1>
+   
     <form id="userForm">
         <p style="display:inline-block;padding:40px;border:2px solid;font-size:140%;font-weight:bold;">
         <label for="userName">Name </label>
@@ -29,6 +29,7 @@
         <button type="submit">Submit</button>
         <button type="reset">Clear</button>
     </form>
+
 
     <div id="users">
     </div>
