Update: deleted unecessary comments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p> -->
             <br><br>
             <label for="favColor">Favorite Color </label>
-            <input type="color" name="favColor" placeholder="Type Here..">
+            <input type="color" name="favColor" placeholder="Type Here.." value="#000000">
             
         </p>
         <br><br>
