Added: css elements to the dl

--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
         <br><br>
         <button type="submit">Submit</button>
         <button type="reset">Clear</button>
+        <button type="button">Temp</button>
     </form>
 
+    </center>
+    <main>
+     <div id="users">
+     </div>
+    </main>
+    
 
-    <div id="users">
-    </div>
-
-</center>
+<!-- </center> -->
 
     <script src="index.js"></script>
 </body>
